fixed body width on mobile phone

--- a/css/index.css
+++ b/css/index.css
@@ -416,6 +416,12 @@ body {
   background: linear-gradient(#eee, #fff);
   background-repeat: no-repeat;
 }
+@media only screen and (max-width: 460px) {
+  body {
+    width: 100%;
+    background: #fff;
+  }
+}
 nav {
   background: #eee;
   z-index: 500;
