--- a/less/page.less
+++ b/less/page.less
@@ -1,6 +1,10 @@
 body {
     background: linear-gradient(#eee,#fff);
     background-repeat: no-repeat;
+    @media only screen and (max-width:460px){
+        width: 100%;
+        background: #fff;
+    }
 }
 nav {
     background: #eee;
